# tpDcc-tools-scripteditor

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
scripts/: launch.py
tests/: test_general.py
tpDcc/tools/scripteditor/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/tools/scripteditor/core/: consts.py  scripteditor.py  session.py
tpDcc/tools/scripteditor/syntax/: python.py
tpDcc/tools/scripteditor/widgets/: completer.py  console.py  script.py  scripteditor.py
